.gitignore : add .bak and .sqlite3 ajustment

--- a/.gitignore
+++ b/.gitignore
@@ -162,10 +162,10 @@ cython_debug/
 #.idea/
 
 
-# Text backup files
+####### Text backup files
 *.bak
 
 
-# Database
+######## Database
 
 *.sqlite3
